# audio_webrtc

./: .gitignore  README.md  cuento.txt  main.py  pyproject.toml  reading.txt
src/: analyzer.py  colors_analyzer.py  controllers.py  custom_filter.py  custom_socketio.py  dtos.py  files.py  information.py  setting.py  templates.py  transformers.py  web_rtc.py
static/css/: base.css  contact.css  index.css  opinion.css  tester.css  tutorial.css
static/js/tester/: MicrophoneTester.js  index.js  method-option.js  microphone.js  multimedia.js  process-actions.js  recorder.js  selector.js  sentences-loader.js  speaker.js  voice-generator.js  web-rtc.js
templates/: base.html  contact.html  index.html  opinion.html  tester.html  tutorial.html
